--- a/MODAMSWeb/Areas/Users/Views/Disposals/CreateDisposal.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Disposals/CreateDisposal.cshtml
@@ -56,9 +56,9 @@
     </div>
     <div class="ms-auto pageheader-btn">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">Dashboard</a></li>
-            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Disposals" asp-action="Index">Disposals</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Create Disposal</li>
+            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">@Localizer["Dashboard"]</a></li>
+            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Disposals" asp-action="Index">@Localizer["Disposals"]</a></li>
+            <li class="breadcrumb-item active" aria-current="page">@Localizer["CreateDisposal"]</li>
         </ol>
     </div>
 </div>
