--- a/MODAMSWeb/Areas/Users/Views/Home/Newsfeed.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Home/Newsfeed.cshtml
@@ -1,18 +1,25 @@
-﻿@model List<MODAMS.Models.NewsFeed>
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@using System.Globalization
+@inject IViewLocalizer Localizer
+
+@model List<MODAMS.Models.NewsFeed>
 @inject MODAMS.Utility.IAMSFunc _func;
 
 <!-- PAGE-HEADER -->
 <div class="page-header">
     <div>
-        <h1 class="page-title">Newsfeed</h1>
+        <h1 class="page-title">@Localizer["Newsfeed"]</h1>
     </div>
     <div class="ms-auto pageheader-btn">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">Dashboard</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Newsfeed</li>
+            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">@Localizer["Dashboard"]</a></li>
+            <li class="breadcrumb-item active" aria-current="page">@Localizer["Newsfeed"]</li>
         </ol>
     </div>
 </div>
+@{
+    var isSomali = CultureInfo.CurrentCulture.Name == "so";
+}
 <!-- PAGE-HEADER END -->
 <!-- ROW-1 OPEN -->
 <div class="card">
@@ -31,7 +38,7 @@
                                     </style>
                                     <path d="M0 256L28.5 28c2-16 15.6-28 31.8-28H228.9c15 0 27.1 12.1 27.1 27.1c0 3.2-.6 6.5-1.7 9.5L208 160H347.3c20.2 0 36.7 16.4 36.7 36.7c0 7.4-2.2 14.6-6.4 20.7l-192.2 281c-5.9 8.6-15.6 13.7-25.9 13.7h-2.9c-15.7 0-28.5-12.8-28.5-28.5c0-2.3 .3-4.6 .9-6.9L176 288H32c-17.7 0-32-14.3-32-32z" />
                                 </svg>
-                                Live Newsfeed
+                                @Localizer["LiveNewsfeed"]
                             </h4>
                         </div>
                     </div>
@@ -48,10 +55,10 @@
                             <table id="tblNewsFeed" class="table table-bordered">
                                 <thead>
                                     <tr>
-                                        <th>S.No.</th>
-                                        <th>Message</th>
-                                        <th>Department</th>
-                                        <th>Time Elapsed</th>
+                                        <th>#</th>
+                                        <th>@Localizer["Message"]</th>
+                                        <th>@Localizer["Department"]</th>
+                                        <th>@Localizer["TimeElapsed"]</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -85,24 +92,45 @@
                                                     @{
                                                         // Calculate time elapsed
                                                         var timeElapsed = DateTime.Now - feed.TimeStamp;
-                                                        string timeElapsedStr = "";
+                                                        string timeElapsedStr;
 
-                                                        // Format time elapsed
                                                         if (timeElapsed.TotalMinutes < 1)
                                                         {
-                                                            timeElapsedStr = $"{(int)timeElapsed.TotalSeconds} seconds ago";
+                                                            timeElapsedStr = isSomali
+                                                            ? $"{(int)timeElapsed.TotalSeconds} ilbiriqsiyo ka hor"
+                                                            : $"{(int)timeElapsed.TotalSeconds} seconds ago";
                                                         }
                                                         else if (timeElapsed.TotalHours < 1)
                                                         {
-                                                            timeElapsedStr = $"{(int)timeElapsed.TotalMinutes} minutes ago";
+                                                            timeElapsedStr = isSomali
+                                                            ? $"{(int)timeElapsed.TotalMinutes} daqiiqo ka hor"
+                                                            : $"{(int)timeElapsed.TotalMinutes} minutes ago";
                                                         }
                                                         else if (timeElapsed.TotalDays < 1)
                                                         {
-                                                            timeElapsedStr = $"{(int)timeElapsed.TotalHours} hours ago";
+                                                            timeElapsedStr = isSomali
+                                                            ? $"{(int)timeElapsed.TotalHours} saacadood ka hor"
+                                                            : $"{(int)timeElapsed.TotalHours} hours ago";
+                                                        }
+                                                        else if (timeElapsed.TotalDays < 30)
+                                                        {
+                                                            timeElapsedStr = isSomali
+                                                            ? $"{(int)timeElapsed.TotalDays} maalmood ka hor"
+                                                            : $"{(int)timeElapsed.TotalDays} days ago";
+                                                        }
+                                                        else if (timeElapsed.TotalDays < 365)
+                                                        {
+                                                            int months = (int)(timeElapsed.TotalDays / 30);
+                                                            timeElapsedStr = isSomali
+                                                            ? $"{months} bilood ka hor"
+                                                            : $"{months} months ago";
                                                         }
                                                         else
                                                         {
-                                                            timeElapsedStr = $"{(int)timeElapsed.TotalDays} days ago";
+                                                            int years = (int)(timeElapsed.TotalDays / 365);
+                                                            timeElapsedStr = isSomali
+                                                            ? $"{years} sano ka hor"
+                                                            : $"{years} years ago";
                                                         }
 
                                                         @timeElapsedStr
