--- a/MODAMSWeb/Areas/Users/Views/Assets/AssetInfo.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/AssetInfo.cshtml
@@ -13,22 +13,22 @@
     </div>
     <div class="ms-auto pageheader-btn">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">Dashboard</a></li>
+            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">@Localizer["Dashboard"]</a></li>
             @{
                 int categoryId = Convert.ToInt32(TempData["categoryId"]);
 
                 if (categoryId > 0)
                 {
-                    <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Assets" asp-action="AssetList" asp-route-id="@categoryId">Asset List</a></li>
+                    <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Assets" asp-action="AssetList" asp-route-id="@categoryId">@Localizer["AssetList"]</a></li>
                 }
                 else
                 {
-                    <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Stores" asp-action="Index">Stores</a></li>
+                    <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Stores" asp-action="Index">@Localizer["Stores"]</a></li>
                     <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Stores" asp-action="StoreDetails" asp-route-id="@TempData["storeId"]">@TempData["storeName"]</a></li>
-                    <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Assets" asp-action="Index" asp-route-id="@TempData["storeId"]">Assets</a></li>
+                    <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Assets" asp-action="Index" asp-route-id="@TempData["storeId"]">@Localizer["Assets"]</a></li>
                 }
             }
-            <li class="breadcrumb-item active" aria-current="page">Asset Information</li>
+            <li class="breadcrumb-item active" aria-current="page">@Localizer["AssetInformation"]</li>
         </ol>
     </div>
 </div>
