--- a/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
@@ -145,7 +145,7 @@
     </div>
     <div class="ms-auto pageheader-btn">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item active"><a href="javascript:void(0);">Dashboard</a></li>
+            <li class="breadcrumb-item active"><a href="javascript:void(0);">@Localizer["Dashboard"]</a></li>
             @*<li class="breadcrumb-item active" aria-current="page">Profile</li>*@
         </ol>
     </div>
