--- a/MODAMSWeb/Areas/Users/Views/Reporting/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Reporting/Index.cshtml
@@ -11,8 +11,8 @@
     </div>
     <div class="ms-auto pageheader-btn">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">Dashboard</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Reports</li>
+            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">@Localizer["Dashboard"]</a></li>
+            <li class="breadcrumb-item active" aria-current="page">@Localizer["Reports"]</li>
         </ol>
     </div>
 </div>
