--- a/MODAMSWeb/Areas/Users/Views/Transfers/CreateTransfer.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Transfers/CreateTransfer.cshtml
@@ -47,9 +47,9 @@
     </div>
     <div class="ms-auto pageheader-btn">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">Dashboard</a></li>
-            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Transfers" asp-action="Index">Transfers</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Create Transfer</li>
+            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">@Localizer["Dashboard"]</a></li>
+            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Transfers" asp-action="Index">@Localizer["Transfers"]</a></li>
+            <li class="breadcrumb-item active" aria-current="page">@Localizer["CreateTransfer"]</li>
         </ol>
     </div>
 </div>
@@ -136,25 +136,25 @@
                                                                             {
                                                                                 for (var i = 0; i < Model.Assets.Count(); i++)
                                                                                 {
-                                                                                            <tr>
+                                                                                    <tr>
 
-                                                                                                <td>
-                                                                                                    <input asp-for="@Model.Assets[i].AssetId" hidden />
-                                                                                                    <div class="col-auto">
-                                                                                                        <label class="ckbox" asp-for="@Model.Assets[i].IsSelected">
-                                                                                                            <input onclick="return selectAsset(@Model.Assets[i].AssetId,this);"
-                                                                                                                   type="checkbox" asp-for="@Model.Assets[i].IsSelected">
-                                                                                                            <span></span>
-                                                                                                        </label>
-                                                                                                    </div>
-                                                                                                </td>
-                                                                                                <td>@Model.Assets[i].Category</td>
-                                                                                                <td>@Model.Assets[i].Make</td>
-                                                                                                <td>@Model.Assets[i].Model</td>
-                                                                                                <td>@Model.Assets[i].AssetName</td>
-                                                                                                <td>@Model.Assets[i].SerialNumber</td>
-                                                                                                <td>@Model.Assets[i].Barcode</td>
-                                                                                            </tr>
+                                                                                        <td>
+                                                                                            <input asp-for="@Model.Assets[i].AssetId" hidden />
+                                                                                            <div class="col-auto">
+                                                                                                <label class="ckbox" asp-for="@Model.Assets[i].IsSelected">
+                                                                                                    <input onclick="return selectAsset(@Model.Assets[i].AssetId,this);"
+                                                                                                            type="checkbox" asp-for="@Model.Assets[i].IsSelected">
+                                                                                                    <span></span>
+                                                                                                </label>
+                                                                                            </div>
+                                                                                        </td>
+                                                                                        <td>@Model.Assets[i].Category</td>
+                                                                                        <td>@Model.Assets[i].Make</td>
+                                                                                        <td>@Model.Assets[i].Model</td>
+                                                                                        <td>@Model.Assets[i].AssetName</td>
+                                                                                        <td>@Model.Assets[i].SerialNumber</td>
+                                                                                        <td>@Model.Assets[i].Barcode</td>
+                                                                                    </tr>
                                                                                 }
                                                                             }
                                                                         }
