--- a/MODAMSWeb/Areas/Users/Views/Verifications/CreateSchedule.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Verifications/CreateSchedule.cshtml
@@ -76,9 +76,9 @@
     </div>
     <div class="ms-auto pageheader-btn">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">Dashboard</a></li>
-            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Verifications" asp-action="Index">Verifications</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Create Schedule</li>
+            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">@Localizer["Dashboard"]</a></li>
+            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Verifications" asp-action="Index">@Localizer["Verifications"]</a></li>
+            <li class="breadcrumb-item active" aria-current="page">@Localizer["CreateSchedule"]</li>
         </ol>
     </div>
 </div>
