--- a/MODAMSWeb/Areas/Users/Views/Verifications/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Verifications/Index.cshtml
@@ -12,8 +12,8 @@
     </div>
     <div class="ms-auto pageheader-btn">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">Dashboard</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Verifications</li>
+            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">@Localizer["Dashboard"]</a></li>
+            <li class="breadcrumb-item active" aria-current="page">@Localizer["Verifications"]</li>
         </ol>
     </div>
 </div>
