--- a/MODAMSWeb/Areas/Users/Views/Transfers/TransferredAssets.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Transfers/TransferredAssets.cshtml
@@ -5,7 +5,7 @@
 @model List<MODAMS.Models.ViewModels.Dto.TransfersOutgoingAssetDTO>
 <div class="page-header">
     <div>
-        <h1 class="page-title">Transferred Assets</h1>
+        <h1 class="page-title">@Localizer["TransferredAssets"]</h1>
     </div>
     <div class="ms-auto pageheader-btn">
         <ol class="breadcrumb">
