--- a/MODAMSWeb/Areas/Identity/Pages/Account/LoginWithRecoveryCode.cshtml
+++ b/MODAMSWeb/Areas/Identity/Pages/Account/LoginWithRecoveryCode.cshtml
@@ -1,8 +1,13 @@
 ﻿@page
+@using System.Globalization
 @model LoginWithRecoveryCodeModel
+
+
 @{
-    ViewData["Title"] = "Recovery code verification";
+    var isSomali = CultureInfo.CurrentCulture.Name == "so";
+    ViewData["Title"] = isSomali ? "Xaqiijinta koodhka soo kabashada" : "Recovery code verification";
     Layout = "_Layout1";
+
 }
 
 <div class="container-login100">
@@ -13,7 +18,7 @@
             </span>
             <div class="text-wrap">
                 <p>
-                    Please provide your recovery code to login
+                    @(isSomali ? "Fadlan soo gudbi koodhkaaga soo kabashada si aad u gasho" : "Please provide your recovery code to login")
                 </p>
             </div>
             <div class="row">
@@ -22,17 +27,17 @@
                         <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
                         <div class="form-floating mb-3">
                             <input asp-for="Input.RecoveryCode" class="form-control" autocomplete="off" placeholder="RecoveryCode" />
-                            <label asp-for="Input.RecoveryCode" class="form-label"></label>
+                            <label asp-for="Input.RecoveryCode" class="form-label">@(isSomali ? "Koodhka Soo Kabashada":"Recovery Code")</label>
                             <span asp-validation-for="Input.RecoveryCode" class="text-danger"></span>
                         </div>
-                        <button type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
+                        <button type="submit" class="w-100 btn btn-lg btn-primary">@(isSomali?"Soo gal":"Log in")</button>
                     </form>
                 </div>
             </div>
         </div>
         <div class="card-footer">
             <div class="col-md-12 col-sm-12 text-center text-darkgray">
-                <span style="font-size:12px;">Developed by&nbsp;|&nbsp;</span><img src="~/assets/images/brand/unops_footer_logo.png">&nbsp;
+                <span style="font-size:12px;">@(isSomali?"Waxaa soo saaray":"Developed by")&nbsp;|&nbsp;</span><img src="~/assets/images/brand/unops_footer_logo.png">&nbsp;
             </div>
         </div>
     </div>
